add fitur scm part 2

--- a/web/index.html
+++ b/web/index.html
@@ -41,6 +41,11 @@
   </script>
     <!-- This script adds the flutter initialization JS code -->
     <script src="flutter.js" defer></script>
+  
+    <!-- print pdf flutter -->
+    <script>
+      var dartPdfJsVersion = "3.2.146";
+    </script>
   </head>
   <body>
     <script>
