--- a/web/index.html
+++ b/web/index.html
@@ -49,6 +49,28 @@
   </head>
   <body>
     <script>
+      // if ("serviceWorker" in navigator) {
+      //   window.addEventListener("load", function () {
+      //     navigator.serviceWorker.register("/flutter_service_worker.js");
+      //   });
+      // }
+      // </script>
+      
+    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-messaging.js"></script>
+    <script>
+      // Salin konfigurasi Firebase yang telah Anda dapatkan
+      var firebaseConfig = {
+  apiKey: "AIzaSyDOyDK9Pm49VTkT7-1-DACD-M84FZaiHhU",
+  authDomain: "flutter-web-83673.firebaseapp.com",
+  projectId: "flutter-web-83673",
+  storageBucket: "flutter-web-83673.appspot.com",
+  messagingSenderId: "493427708399",
+  appId: "1:493427708399:web:b9d4abd257d81fa639e61a"
+};
+      firebase.initializeApp(firebaseConfig);
+    </script>
+    <script>
       window.addEventListener("load", function (ev) {
         // Download main.dart.js
         _flutter.loader.loadEntrypoint({
