--- a/web/index.html
+++ b/web/index.html
@@ -50,7 +50,30 @@
   <body>
     <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-messaging.js"></script>
-    <script>
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-analytics.js";
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+    
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      const firebaseConfig = {
+        apiKey: "AIzaSyDOyDK9Pm49VTkT7-1-DACD-M84FZaiHhU",
+        authDomain: "flutter-web-83673.firebaseapp.com",
+        projectId: "flutter-web-83673",
+        storageBucket: "flutter-web-83673.appspot.com",
+        messagingSenderId: "493427708399",
+        appId: "1:493427708399:web:b9d4abd257d81fa639e61a",
+        measurementId: "G-XJ0LT97BZX"
+      };
+    
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
+    </script>
+    <!-- <script>
       // Salin konfigurasi Firebase yang telah Anda dapatkan
       var firebaseConfig = {
   apiKey: "AIzaSyDOyDK9Pm49VTkT7-1-DACD-M84FZaiHhU",
@@ -61,7 +84,7 @@
   appId: "1:493427708399:web:b9d4abd257d81fa639e61a"
 };
       firebase.initializeApp(firebaseConfig);
-    </script>
+    </script> -->
     <script>
       window.addEventListener("load", function (ev) {
         // Download main.dart.js
